Bug 369380 - When multiple updates recommend a reboot, multiple messages are shown
Summary: When multiple updates recommend a reboot, multiple messages are shown
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.7.95
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-26 15:16 UTC by Fabian Vogt
Modified: 2016-10-03 13:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-09-26 15:16:47 UTC
Seven updates were available, two recommend a reboot and one cannot be installed (typical test updates). Result:
- One error dialog about the conflict
- Two message boxes about reboot recommendation

All dialogs appear simultaneously

Reproducible: Always
Comment 1 Aleix Pol 2016-09-28 10:41:46 UTC
Can you please notify your distribution about this issue? Feel free to CC me in it, but this task isn't performed by Discover.
Comment 2 Fabian Vogt 2016-09-28 15:17:40 UTC
(In reply to Aleix Pol from comment #1)
> Can you please notify your distribution about this issue? Feel free to CC me
> in it, but this task isn't performed by Discover.

It is, it opens a new dialog for each PackageKit message instead of accumulating them in libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp
Comment 3 Aleix Pol 2016-09-28 22:39:41 UTC
?
Let's see, what dialog are you talking about?
Comment 4 Fabian Vogt 2016-09-29 07:55:49 UTC
(In reply to Aleix Pol from comment #3)
> ?
> Let's see, what dialog are you talking about?

This one (and similiar calls): https://github.com/KDE/discover/blob/master/libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp#L268
Comment 5 Aleix Pol 2016-10-03 13:00:42 UTC
Git commit b2cb8497818d86d2c55aa788102dc86d86200af2 by Aleix Pol.
Committed on 03/10/2016 at 12:34.
Pushed by apol into branch 'Plasma/5.8'.

Let transactions emit messages into kirigami passive notifications

M  +3    -0    discover/qml/DiscoverWindow.qml
M  +2    -0    libdiscover/Transaction/Transaction.h
M  +3    -3    libdiscover/backends/PackageKitBackend/PKTransaction.cpp

http://commits.kde.org/discover/b2cb8497818d86d2c55aa788102dc86d86200af2