Let transactions emit messages into kirigami passive notifications

BUG: 369380